# klient

./: .gitignore  CMakeLists.txt  biicode.conf  main.cpp
src/: client.cpp  konstructs.h  main.cpp  old_main.h
